force-app/main/default/objects/Lead/fields/DevOps_Center_Test__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Test__c</fullName>
    <description>CXAPPS-999999999</description>
    <label>DevOps Center Test</label>
    <length>250</length>
    <type>Text</type>
</CustomField>