force-app/main/default/objects/Lead/fields/DevOps_Test_1__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Test_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DevOps Test 1</label>
    <type>Checkbox</type>
</CustomField>