force-app/main/default/objects/Lead/fields/Lead_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Test_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CXAPPS-1234567.  Devops Center Test</description>
    <label>Lead Test Field</label>
    <type>Checkbox</type>
</CustomField>